--- a/index.html
+++ b/index.html
@@ -5,31 +5,34 @@
 
 
 <!-- Inicio do cabeçalho-->
+
 <head>
     <!--Define um titulo para a pagina-->
-    <title>Pagina Teste</title>
+    <title>My Persona Page</title>
     <!--Utilizada para codificação de caracteres-->
     <meta charset="utf-8">
     <!--Tags para posicionamento CEO-->
+    <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <meta name="decription" content="Cursos de Desenvolvimento Web">
     <meta name="keywords" content="Html5, CSS3, JS">
     <meta name="author" content="Rondinele Guimarães">
     <meta name="robots" content="noindex, nofollow">
     <link href="./assets/css/main.css" rel="stylesheet">
-<!-- Fim do cabeçalho-->
+    <!-- Fim do cabeçalho-->
 </head>
 
 <!-- Inicio do corpo da página, todo conteudo fica dentro o body-->
+
 <body>
-   
+
     <nav>
-        <h1>Teste</h1>
+        <h1>Banner</h1>
     </nav>
     <div class="banner">
-        
+
     </div>
 
-<!-- Fim do corpo da pagina-->
+    <!-- Fim do corpo da pagina-->
 </body>
 
 </html>
