Creating header and editing css files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>My Persona Page</title>
+    <title>My First Web Page</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <meta name="decription" content="Cursos de Desenvolvimento Web">
@@ -12,13 +12,20 @@
     <meta name="robots" content="noindex, nofollow">
     <link href="./assets/css/main.css" rel="stylesheet">
 </head>
-<body>
 
-    <nav>
-        <h1>Banner</h1>
-    </nav>
-    <div class="banner">
-    </div>
+<body>
+    <header style="color: #0019a7;">
+        <nav>
+            <ul>
+                <li>Home</li>
+                <li>Store</li>
+                <li>About</li>
+            </ul>
+        </nav>
+        <hr>
+        <h1>The page title</h1>
+
+    </header>
 </body>
 
 </html>
