remove color style

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header style="color: #0019a7;">
+    <heade">
         <nav>
             <ul>
                 <li>Home</li>
