--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>The page title</h1>
         </header>
         <section>
-            <h2>ABOUT</h2>
+            <h2>ABOUT</h2><br>
             <p>
                 is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
                 standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
@@ -44,6 +44,14 @@
                 typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
                 Letraset sheets containing Lorem </p>
         </section>
+        <footer>
+            <h3>Footer Title</h3>
+            <ul >
+                <li>Instagran</li>
+                <li>Facebook</li>
+                <li>Twitter</li>
+            </ul>
+        </footer>
 </body>
 
 </html>
