Add image in footer

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
                 Letraset sheets containing Lorem </p>
         </section>
-        <footer>
+        <footer class="social">
             <h3>Footer Title</h3>
             <ul >
                 <li>Instagran</li>
