--- a/index.html
+++ b/index.html
@@ -26,23 +26,8 @@
         <h1>The page title</h1>
         </header>
         <section>
-            <h2>ABOUT</h2><br>
-            <p>
-                is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-                typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-                Letraset sheets containing Lorem
-            </p><br>
-            <div class="banner">
-            </div>
-            <br>
-            <p>
-                is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
-                to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-                typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-                Letraset sheets containing Lorem </p>
+            <h2>Index</h2><br>
+             
         </section>
         <footer class="social">
             <h3>Footer Title</h3>
