Add info of tour

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>My First Web Page</title>
+    <title>Home</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <meta name="decription" content="Cursos de Desenvolvimento Web">
@@ -23,15 +23,107 @@
             </ul>
         </nav>
         <hr>
-        <h1>The page title</h1>
+        <h1>The Generics</h1>
+        <button type="button">Get our latest Album</button>
+        <br><br>
+        <!-- TODO : Fine a suitable background image-->
+        <button type="button">&#9658</button>
+
         </header>
         <section>
-            <h2>Index</h2><br>
-             
+            <h2>Tours</h2><br>
+
+            <div>
+                <div>
+                    <strong>JUL 16</strong>
+                    &lt;&gt;
+                    <span>DETROIT, MI</span>
+                    &lt;&gt;
+                    <span>DTE ENERGY MUISIC THEATRE</span>
+                    &lt;&gt;
+                    <button type="button">BUY TICKETS</button>
+                </div>
+                <div>
+                    <strong>JUL 16</strong>
+                    &lt;&gt;
+                    <span>DETROIT, MI</span>
+                    &lt;&gt;
+                    <span>DTE ENERGY MUISIC THEATRE</span>
+                    &lt;&gt;
+                    <button type="button">BUY TICKETS</button>
+                </div>
+                <div>
+                    <strong>JUL 16</strong>
+                    &lt;&gt;
+                    <span>DETROIT, MI</span>
+                    &lt;&gt;
+                    <span>DTE ENERGY MUISIC THEATRE</span>
+                    &lt;&gt;
+                    <button type="button">BUY TICKETS</button>
+                </div>
+                <div>
+                        <strong>JUL 16</strong>
+                        &lt;&gt;
+                        <span>DETROIT, MI</span>
+                        &lt;&gt;
+                        <span>DTE ENERGY MUISIC THEATRE</span>
+                        &lt;&gt;
+                        <button type="button">BUY TICKETS</button>
+                    </div>
+                    <div>
+                        <strong>JUL 16</strong>
+                        &lt;&gt;
+                        <span>DETROIT, MI</span>
+                        &lt;&gt;
+                        <span>DTE ENERGY MUISIC THEATRE</span>
+                        &lt;&gt;
+                        <button type="button">BUY TICKETS</button>
+                    </div>
+                    <div>
+                        <strong>JUL 16</strong>
+                        &lt;&gt;
+                        <span>DETROIT, MI</span>
+                        &lt;&gt;
+                        <span>DTE ENERGY MUISIC THEATRE</span>
+                        &lt;&gt;
+                        <button type="button">BUY TICKETS</button>
+                    </div>
+                <div>
+                    <strong>JUL 16</strong>
+                    &lt;&gt;
+                    <span>DETROIT, MI</span>
+                    &lt;&gt;
+                    <span>DTE ENERGY MUISIC THEATRE</span>
+                    &lt;&gt;
+                    <button type="button">BUY TICKETS</button>
+                </div>
+
+                <div>
+                    <strong>JUL 26</strong>
+                    &lt;&gt;
+                    <span>DETROIT, MI</span>
+                    &lt;&gt;
+                    <span>DTE ENERGY MUISIC THEATRE</span>
+                    &lt;&gt;
+                    <button type="button">BUY TICKETS</button>
+                </div>
+                <div>
+                    <strong>JUL 6</strong>
+                    &lt;&gt;
+                    <span>DETROIT, MI</span>
+                    &lt;&gt;
+                    <span>DTE ENERGY MUISIC THEATRE</span>
+                    &lt;&gt;
+                    <button type="button">BUY TICKETS</button>
+                </div>
+
+
+            </div>
+
         </section>
         <footer class="social">
             <h3>Footer Title</h3>
-            <ul >
+            <ul>
                 <li>Instagran</li>
                 <li>Facebook</li>
                 <li>Twitter</li>
