--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>My First Web Page</title>
+    <title>The Generics</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <meta name="decription" content="Cursos de Desenvolvimento Web">
@@ -23,7 +23,7 @@
             </ul>
         </nav>
         <hr>
-        <h1>The page title</h1>
+        <h1>The Generics</h1>
         </header>
         <section>
             <h2>ABOUT</h2><br>
