--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-BR">
 
 <head>
-    <title>Home</title>
+    <title>The Generics</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.o">
     <meta name="decription" content="Cursos de Desenvolvimento Web">
@@ -32,7 +32,6 @@
         </header>
         <section>
             <h2>Tours</h2><br>
-
             <div>
                 <div>
                     <strong>JUL 16</strong>
