--- a/src/index.html
+++ b/src/index.html
@@ -3,131 +3,53 @@
 <html lang="pt-BR">
 
 <head>
-    <title>The Generics</title>
+    <title>Web Developer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.o">
-    <meta name="decription" content="Cursos de Desenvolvimento Web">
+    <meta name="decription" content="Web Developer">
     <meta name="keywords" content="Html5, CSS3, JS">
     <meta name="author" content="Rondinele Guimarães">
     <meta name="robots" content="noindex, nofollow">
+    <link rel="icon" href="./img/favicon.png">
     <link href="./assets/css/main.css" rel="stylesheet">
 </head>
 
 <body>
-    <heade">
-        <nav>
-            <ul>
-                <li>Home</li>
-                <li>Store</li>
-                <li>About</li>
-            </ul>
-        </nav>
-        <hr>
-        <h1>The Generics</h1>
-        <button type="button">Get our latest Album</button>
-        <br><br>
-        <!-- TODO : Fine a suitable background image-->
-        <button type="button">&#9658</button>
 
-        </header>
-        <section>
-            <h2>Tours</h2><br>
-            <div>
-                <div>
-                    <strong>JUL 16</strong>
-                    &lt;&gt;
-                    <span>DETROIT, MI</span>
-                    &lt;&gt;
-                    <span>DTE ENERGY MUISIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                </div>
-                <div>
-                    <strong>JUL 16</strong>
-                    &lt;&gt;
-                    <span>DETROIT, MI</span>
-                    &lt;&gt;
-                    <span>DTE ENERGY MUISIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                </div>
-                <div>
-                    <strong>JUL 16</strong>
-                    &lt;&gt;
-                    <span>DETROIT, MI</span>
-                    &lt;&gt;
-                    <span>DTE ENERGY MUISIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                </div>
-                <div>
-                        <strong>JUL 16</strong>
-                        &lt;&gt;
-                        <span>DETROIT, MI</span>
-                        &lt;&gt;
-                        <span>DTE ENERGY MUISIC THEATRE</span>
-                        &lt;&gt;
-                        <button type="button">BUY TICKETS</button>
-                    </div>
-                    <div>
-                        <strong>JUL 16</strong>
-                        &lt;&gt;
-                        <span>DETROIT, MI</span>
-                        &lt;&gt;
-                        <span>DTE ENERGY MUISIC THEATRE</span>
-                        &lt;&gt;
-                        <button type="button">BUY TICKETS</button>
-                    </div>
-                    <div>
-                        <strong>JUL 16</strong>
-                        &lt;&gt;
-                        <span>DETROIT, MI</span>
-                        &lt;&gt;
-                        <span>DTE ENERGY MUISIC THEATRE</span>
-                        &lt;&gt;
-                        <button type="button">BUY TICKETS</button>
-                    </div>
-                <div>
-                    <strong>JUL 16</strong>
-                    &lt;&gt;
-                    <span>DETROIT, MI</span>
-                    &lt;&gt;
-                    <span>DTE ENERGY MUISIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                </div>
-
-                <div>
-                    <strong>JUL 26</strong>
-                    &lt;&gt;
-                    <span>DETROIT, MI</span>
-                    &lt;&gt;
-                    <span>DTE ENERGY MUISIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                </div>
-                <div>
-                    <strong>JUL 6</strong>
-                    &lt;&gt;
-                    <span>DETROIT, MI</span>
-                    &lt;&gt;
-                    <span>DTE ENERGY MUISIC THEATRE</span>
-                    &lt;&gt;
-                    <button type="button">BUY TICKETS</button>
-                </div>
-
-
-            </div>
-
-        </section>
-        <footer class="social">
-            <h3>Footer Title</h3>
-            <ul>
-                <li>Instagran</li>
-                <li>Facebook</li>
-                <li>Twitter</li>
-            </ul>
-        </footer>
 </body>
+<h1>Sobre mim</h1>
+
+<P>
+    Moro em São Paulo mas atendo clientes do mundo todo. Sou conhecido por fazer produtos de qualidade, durabilidade e que agregam valor para meus clientes. Trabalho usando a web como plataforma, ou seja, respiro HTML5, CSS3 e JavaScript (ou melhor: ECMASCript).
+    Crio sites para todos, seguindo as principais diretivas de acessibilidade, responsividade e web semântica, sem descuidar da qualidade de código.
+</P>
+
+<h2>Como trabalho</h2>
+
+<p>
+    Satisfazer meus clientes é prioridade. Para isso, garanto um processo de desenvolvimento altamente interativo, baseado em feedback contínuo. Não trabalho com escopo fechado: o cliente é que decide quando o produto está pronto.
+
+</p>
+
+<p>
+    Também não trabalho com prazos fechados: qualidade é importante demais para ser sacrificada.
+
+</p>
+
+<h2>
+    Experiência
+</h2>
+
+
+<p>
+    Já desenvolvi projetos para grandes empresas como BMW, UOL e IBM. Neles, o foco principal era entregar uma experiência imersiva e impactante para o usuário final sem descuidar do desempenho e da acessibilidade da página. Também já fui contratado para
+    transformar grandes portais, como Terra e G1, em páginas responsivas. Fui responsável por renovar o layout, reorganizar o conteúdo e re-escrever o código de forma mais reaproveitável.
+
+</p>
+<h2>Comunidade</h2>
+
+<p>
+    Procuro repassar meu conhecimento para a comunidade. Para isso, já dei diversas palestras e mantenho um blog.
+</p>
 
 </html>
