--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
     <meta name="keywords" content="Html5, CSS3, JS">
     <meta name="author" content="Rondinele Guimarães">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="icon" href="./img/favicon.png">
-    <link href="./assets/css/main.css" rel="stylesheet">
+    <link rel="icon" href="/src/img/favicon.png">
+    <link href="/src/css/main.css" rel="stylesheet">
 </head>
 
 <body>
